--- a/components/header.html
+++ b/components/header.html
@@ -1,13 +1,13 @@
 <header class="header">
     <div class="header__logo">
-        <img src="../assets/images/logos_orpps/orpps_logo.png" alt="Logo Orpps" />
+        <img src="https://fxpoyosomio.github.io/Orpps/assets/images/logos_orpps/orpps_logo.png" alt="Logo Orpps" />
     </div>
     <nav class="header__nav">
         <ul>
-            <li><a href="../index.html">Accueil</a></li>
-            <li><a href="../recettes.html">Recettes</a></li>
-            <li><a href="../planification.html">Planification</a></li>
-            <li><a href="../courses.html">Courses</a></li>
+            <li><a href="https://fxpoyosomio.github.io/Orpps/index.html">Accueil</a></li>
+            <li><a href="https://fxpoyosomio.github.io/Orpps/recettes.html">Recettes</a></li>
+            <li><a href="https://fxpoyosomio.github.io/Orpps/planification.html">Planification</a></li>
+            <li><a href="https://fxpoyosomio.github.io/Orpps/courses.html">Courses</a></li>
         </ul>
     </nav>
     <button class="header__burger" id="burgerMenu">
@@ -17,10 +17,10 @@
 <div class="header__overlay" id="overlayMenu">
     <nav class="header__mobile-nav">
         <ul>
-            <li><a href="../index.html">Accueil</a></li>
-            <li><a href="../recettes.html">Recettes</a></li>
-            <li><a href="../planification.html">Planification</a></li>
-            <li><a href="../courses.html">Courses</a></li>
+            <li><a href="https://fxpoyosomio.github.io/Orpps/index.html">Accueil</a></li>
+            <li><a href="https://fxpoyosomio.github.io/Orpps/recettes.html">Recettes</a></li>
+            <li><a href="https://fxpoyosomio.github.io/Orpps/planification.html">Planification</a></li>
+            <li><a href="https://fxpoyosomio.github.io/Orpps/courses.html">Courses</a></li>
         </ul>
     </nav>
 </div>
