chemin absolu logo pour header

--- a/components/header.html
+++ b/components/header.html
@@ -1,6 +1,6 @@
 <header class="header">
     <div class="header__logo">
-        <img src="/Orpps/assets/images/logos_orpps/orpps_logo.png" alt="Logo Orpps" />
+        <img src="/Orpps/assets/images/logos_orpps/orpps_logo.png" alt="Logo-Orpps" />
     </div>
     <nav class="header__nav">
         <ul>
