Réorganiser la logique DOM

--- a/components/header.html
+++ b/components/header.html
@@ -1,26 +1,22 @@
-<header class="header">
+<div class="header">
     <div class="header__logo">
-        <img src="/Orpps/assets/images/logos_orpps/Orpps_logo.png" alt="Logo-Orpps" />
+        <img src="/Orpps/assets/images/logos_orpps/logo.png" alt="Logo Orpps">
+    </div>
+    <button id="burgerMenu" class="header__burger">☰</button>
+    <div id="overlayMenu" class="header__overlay">
+        <nav class="header__mobile-nav">
+            <ul>
+                <li><a href="#link1">Link 1</a></li>
+                <li><a href="#link2">Link 2</a></li>
+                <li><a href="#link3">Link 3</a></li>
+            </ul>
+        </nav>
     </div>
     <nav class="header__nav">
         <ul>
-            <li><a href="/Orpps/index.html">Accueil</a></li>
-            <li><a href="/Orpps/recettes.html">Recettes</a></li>
-            <li><a href="/Orpps/planification.html">Planification</a></li>
-            <li><a href="/Orpps/courses.html">Courses</a></li>
-        </ul>
-    </nav>
-    <button class="header__burger" id="burgerMenu">
-        ☰
-    </button>
-</header>
-<div class="header__overlay" id="overlayMenu">
-    <nav class="header__mobile-nav">
-        <ul>
-            <li><a href="/Orpps/index.html">Accueil</a></li>
-            <li><a href="/Orpps/recettes.html">Recettes</a></li>
-            <li><a href="/Orpps/planification.html">Planification</a></li>
-            <li><a href="/Orpps/courses.html">Courses</a></li>
+            <li><a href="#link1">Link 1</a></li>
+            <li><a href="#link2">Link 2</a></li>
+            <li><a href="#link3">Link 3</a></li>
         </ul>
     </nav>
 </div>
