--- a/components/header.html
+++ b/components/header.html
@@ -1,22 +1,23 @@
+<!-- components/header.html -->
 <div class="header">
     <div class="header__logo">
-        <img src="/Orpps/assets/images/logos_orpps/logo.png" alt="Logo Orpps">
-    </div>
-    <button id="burgerMenu" class="header__burger">☰</button>
-    <div id="overlayMenu" class="header__overlay">
-        <nav class="header__mobile-nav">
-            <ul>
-                <li><a href="#link1">Link 1</a></li>
-                <li><a href="#link2">Link 2</a></li>
-                <li><a href="#link3">Link 3</a></li>
-            </ul>
-        </nav>
+        <img src="/path/to/logo.png" alt="Logo">
     </div>
     <nav class="header__nav">
         <ul>
-            <li><a href="#link1">Link 1</a></li>
-            <li><a href="#link2">Link 2</a></li>
-            <li><a href="#link3">Link 3</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </nav>
+    <button id="burgerMenu" class="header__burger">☰</button>
+</div>
+<div id="overlayMenu" class="header__overlay">
+    <div class="header__mobile-nav">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </div>
 </div>
