création menu burger en croix pour active

--- a/components/header.html
+++ b/components/header.html
@@ -10,7 +10,11 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
-    <button id="burgerMenu" class="header__burger">☰</button>
+    <div id="burgerMenu" class="header__burger">
+        <div class="bar bar1"></div>
+        <div class="bar bar2"></div>
+        <div class="bar bar3"></div>
+    </div>
 </div>
 <div id="overlayMenu" class="header__overlay">
     <div class="header__mobile-nav">
