--- a/css/styles.css
+++ b/css/styles.css
@@ -233,6 +233,8 @@ h1, h2, h3 {
     padding: 15px 20px;
     background-color: #ffffff;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    position: relative; /* Ajouté pour le positionnement relatif */
+    z-index: 1000; /* Assurer que le header est au-dessus du contenu */
 }
 
 .header__logo img {
@@ -250,9 +252,6 @@ h1, h2, h3 {
     color: #333;
     font-weight: bold;
 }
-
-
-
 
 /* Styles du menu burger */
 .header__burger {
@@ -274,8 +273,8 @@ h1, h2, h3 {
 /* Styles pour le menu lorsqu'il est actif */
 #overlayMenu {
     display: none; /* Masquer le menu par défaut */
-    position: absolute; /* Modifier la position ici */
-    top: 70px; /* Ajuste en fonction de la hauteur de ton header */
+    position: absolute; /* Position absolue par rapport à son parent (header) */
+    top: 100%; /* Positionné juste en dessous du header */
     left: 0;
     width: 100%;
     background-color: rgba(255, 255, 255, 1); /* Fond blanc pour le menu */
