--- a/components/header.html
+++ b/components/header.html
@@ -1,8 +1,9 @@
 <!-- components/header.html -->
 <div class="header">
     <div class="header__logo">
-        <img src="/Orpps/assets/images/logos_orpps/Orpps_logo.png" alt="Logo">
-    </div>
+        <a href="/Orpps/index.html"> <!-- Ajoutez cette balise <a> autour de l'image -->
+            <img src="/Orpps/assets/images/logos_orpps/Orpps_logo.png" alt="Logo">
+        </a>    </div>
     <nav class="header__nav">
         <ul>
             <li><a href="/Orpps/_recettes/recettes.html">Recettes</a></li>
