fix header path

--- a/components/header.html
+++ b/components/header.html
@@ -3,7 +3,8 @@
     <div class="header__logo">
         <a href="/Orpps/index.html"> <!-- Ajoutez cette balise <a> autour de l'image -->
             <img src="/Orpps/assets/images/logos_orpps/Orpps_logo.png" alt="Logo">
-        </a>    </div>
+        </a>    
+    </div>
     <nav class="header__nav">
         <ul>
             <li><a href="/Orpps/_recettes/recettes.html">Recettes</a></li>
