changement de place des pages

--- a/components/header.html
+++ b/components/header.html
@@ -7,8 +7,8 @@
     </div>
     <nav class="header__nav">
         <ul>
-            <li><a href="/Orpps/recettes/recettes">Recettes</a></li>
-            <li><a href="/Orpps/liste_de_course/liste_de_course.html">Liste de course</a></li>
+            <li><a href="/Orpps/recettes.html">Recettes</a></li>
+            <li><a href="/Orpps/liste_de_course.html">Liste de course</a></li>
         </ul>
     </nav>
     <div id="burgerMenu" class="header__burger">
@@ -20,8 +20,8 @@
 <div id="overlayMenu" class="header__overlay">
     <div class="header__mobile-nav">
         <ul>
-            <li><a href="/Orpps/recettes/recettes.html">Recettes</a></li>
-            <li><a href="/Orpps/liste_de_course/liste_de_course.html">Liste de course</a></li>
+            <li><a href="/Orpps/recettes.html">Recettes</a></li>
+            <li><a href="/Orpps/liste_de_course.html">Liste de course</a></li>
         </ul>
     </div>
 </div>
