--- a/components/header.html
+++ b/components/header.html
@@ -1,20 +1,22 @@
 <!-- components/header.html -->
 <div class="header">
-    <div class="header__logo">
-        <a href="/Orpps/index.html"> <!-- Ajoutez cette balise <a> autour de l'image -->
-            <img src="/Orpps/assets/images/logos_orpps/Orpps_logo.png" alt="Logo">
-        </a>    
-    </div>
-    <nav class="header__nav">
-        <ul>
-            <li><a href="/Orpps/recettes.html">Recettes</a></li>
-            <li><a href="/Orpps/liste_de_course.html">Liste de course</a></li>
-        </ul>
-    </nav>
-    <div id="burgerMenu" class="header__burger">
-        <div class="bar bar1"></div>
-        <div class="bar bar2"></div>
-        <div class="bar bar3"></div>
+    <div class="container">
+        <div class="header__logo">
+            <a href="/Orpps/index.html"> <!-- Ajoutez cette balise <a> autour de l'image -->
+                <img src="/Orpps/assets/images/logos_orpps/Orpps_logo.png" alt="Logo">
+            </a>    
+        </div>
+        <nav class="header__nav">
+            <ul>
+                <li><a href="/Orpps/recettes.html">Recettes</a></li>
+                <li><a href="/Orpps/liste_de_course.html">Liste de course</a></li>
+            </ul>
+        </nav>
+        <div id="burgerMenu" class="header__burger">
+            <div class="bar bar1"></div>
+            <div class="bar bar2"></div>
+            <div class="bar bar3"></div>
+        </div>
     </div>
 </div>
 <div id="overlayMenu" class="header__overlay">
