modification de l'affichage du header mobil après clic bouton burger

--- a/components/header.html
+++ b/components/header.html
@@ -2,7 +2,7 @@
 <div class="header">
     <div class="container">
         <div class="header__logo">
-            <a href="/Orpps/index.html"> <!-- Ajoutez cette balise <a> autour de l'image -->
+            <a href="/Orpps/index.html">
                 <img src="/Orpps/assets/images/logos_orpps/Orpps_logo.png" alt="Logo">
             </a>    
         </div>
@@ -18,12 +18,12 @@
             <div class="bar bar3"></div>
         </div>
     </div>
-</div>
-<div id="overlayMenu" class="header__overlay">
-    <div class="header__mobile-nav">
-        <ul>
-            <li><a href="/Orpps/recettes.html">Recettes</a></li>
-            <li><a href="/Orpps/liste_de_course.html">Liste de course</a></li>
-        </ul>
+    <div id="overlayMenu" class="header__overlay">
+        <div class="header__mobile-nav">
+            <ul>
+                <li><a href="/Orpps/recettes.html">Recettes</a></li>
+                <li><a href="/Orpps/liste_de_course.html">Liste de course</a></li>
+            </ul>
+        </div>
     </div>
 </div>
