essai menu burger v2

--- a/components/header.html
+++ b/components/header.html
@@ -12,10 +12,10 @@
                 <li><a href="/Orpps/liste_de_course.html">Liste de course</a></li>
             </ul>
         </nav>
-        <div id="burgerMenu" class="header__burger">
-            <div class="bar bar1"></div>
-            <div class="bar bar2"></div>
-            <div class="bar bar3"></div>
+        <div id="burgerMenu" class="header__burger" aria-haspopup="menu" aria-label="Menu">
+            <span class="bar bar1"></span>
+            <span class="bar bar2"></span>
+            <span class="bar bar3"></span>
         </div>
     </div>
     <div id="overlayMenu" class="header__overlay">
