--- a/css/styles.css
+++ b/css/styles.css
@@ -272,22 +272,40 @@ h1, h2, h3 {
     font-weight: bold;
 }
 
-/* Styles du menu burger */
+/* Styles pour le menu burger */
 .header__burger {
-    display: none; /* Masquer par défaut */
+    display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    height: 40px; /* Ajustez la hauteur selon vos besoins */
     cursor: pointer;
-    width: 30px;
-    height: 20px;
 }
 
-.bar {
-    height: 4px; /* Hauteur des barres */
-    width: 100%;
-    background-color: #333; /* Couleur des barres */
-    transition: all 0.3s ease; /* Transition pour l'animation */
+.header__burger > span {
+    position: relative;
+    display: block;
+    height: 3px;
+    border-radius: 2px;
+    transition: all cubic-bezier(0.25, 0.1, 0.28, 1.54) 0.32s;
+    background-color: #000; /* Couleur des barres */
 }
+
+.header__burger > span:first-child {
+    width: 25px;
+    margin-bottom: 7px;
+}
+
+.header__burger > span:nth-child(2) {
+    width: 18px;
+    margin: 0 auto 7px;
+}
+
+.header__burger > span:last-child {
+    width: 25px;
+    margin-bottom: 7px;
+}
+
 
 /* Styles pour le menu lorsqu'il est actif */
 #overlayMenu {
@@ -392,18 +410,26 @@ h1, h2, h3 {
 
 
 
-/* --- Animation du menu burger lors du clic --- */
-.active .bar1 {
-    transform: translateY(8px) rotate(45deg); /* Déplacement vers le bas et rotation */
+/* Animation du burger menu */
+.header.modal-burger-open .header__burger > span:first-child {
+    top: 10px;
+    transform: rotate(-45deg);
 }
 
-.active .bar2 {
-    opacity: 0; /* Masquer la barre du milieu */
+.header.modal-burger-open .header__burger > span:nth-child(2) {
+    width: 0;
+    opacity: 0;
 }
 
-.active .bar3 {
-    transform: translateY(-8px) rotate(-45deg); /* Déplacement vers le haut et rotation */
+.header.modal-burger-open .header__burger > span:last-child {
+    top: -10px;
+    transform: rotate(45deg);
 }
+
+.header.modal-burger-open .header__overlay {
+    display: flex; /* Affiche l'overlay quand le menu est ouvert */
+}
+
 
 
 
