--- a/css/styles.css
+++ b/css/styles.css
@@ -243,7 +243,7 @@ h1, h2, h3 {
     max-width: 980px;
     width: 100%; /* S'assure que le container prend 100% de l'espace disponible */
     margin: 0 auto;
-    padding: 0 15px;
+    padding: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
