--- a/css/styles.css
+++ b/css/styles.css
@@ -205,6 +205,8 @@
 /* --- Style de base pour les balise simple --- */
 body {
     font-family: 'Caviar Dreams', sans-serif; /* Utilise Caviar Dreams comme police principale */
+    margin: 0;
+    padding-top: 80px;
 }
 
 h1, h2, h3 {
@@ -233,8 +235,11 @@ h1, h2, h3 {
     padding: 15px 20px;
     background-color: #ffffff;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    position: relative;
-    z-index: 1000;
+    position: fixed; /* Fixe l'en-tête en haut de la page */
+    top: 0;          /* Positionne l'en-tête tout en haut */
+    left: 0;         /* Aligne l'en-tête à gauche */
+    width: 100%;     /* Fait en sorte que l'en-tête prenne toute la largeur */
+    z-index: 1000;   /* Assure que l'en-tête est au-dessus des autres éléments */
     transition: height 0.3s ease; /* Transition pour l'agrandissement */
 }
 
