--- a/css/styles.css
+++ b/css/styles.css
@@ -230,7 +230,7 @@ h1, h2, h3 {
 .header {
     display: flex;
     flex-direction: column; /* Changez la direction en colonne */
-    align-items: flex-start; /* Alignez le contenu à gauche */
+    align-items: center; /* Centre le contenu horizontalement */
     justify-content: center;
     padding: 15px 20px;
     background-color: #ffffff;
@@ -239,11 +239,12 @@ h1, h2, h3 {
     top: 0;          /* Positionne l'en-tête tout en haut */
     left: 0;         /* Aligne l'en-tête à gauche */
     width: 100%;     /* Fait en sorte que l'en-tête prenne toute la largeur */
-    max-width: 980px;
+    margin: 0 auto;   /* Centre le header horizontalement */
     z-index: 1000;   /* Assure que l'en-tête est au-dessus des autres éléments */
     transition: height 0.3s ease; /* Transition pour l'agrandissement */
-    box-sizing: border-box;
+    box-sizing: border-box; /* Pour inclure le padding et la bordure dans la largeur totale */
 }
+
 
 /* Container qui limite la largeur du contenu interne */
 .header .container {
