--- a/css/styles.css
+++ b/css/styles.css
@@ -339,6 +339,7 @@ h1, h2, h3 {
     padding: 15px; /* Espacement interne */
     background-color: rgba(255, 255, 255, 1); /* Fond blanc */
     max-width: var(--page-max-width);
+    margin: 0 auto;
 }
 
 .header__mobile-nav ul {
