séparation du logo en user + logo

--- a/components/header.html
+++ b/components/header.html
@@ -3,7 +3,10 @@
     <div class="container">
         <div class="header__logo">
             <a href="/Orpps/index.html">
-                <img src="/Orpps/assets/images/logos_orpps/Orpps_logo.png" alt="Logo">
+                <img src="/Orpps/assets/images/logos_orpps/orpps_logo.png" alt="Orpps Logo">
+            </a>
+            <a href="#" id="userLogoLink"> <!-- Lien non défini pour le moment -->
+                <img src="/Orpps/assets/images/logos_orpps/user_logo.png" alt="User Logo">
             </a>    
         </div>
         <div id="burgerMenu" class="header__burger" aria-haspopup="menu" aria-label="Menu">
