séparation de l'iamge user en deux dans le header

--- a/components/header.html
+++ b/components/header.html
@@ -3,7 +3,10 @@
     <div class="container">
         <div class="header__logo">
             <a href="#" id="userLogoLink"> <!-- Lien non défini pour le moment -->
-                <img src="/Orpps/assets/images/logos_orpps/user_logo.png" alt="User Logo">
+                <div class="user-logo">
+                    <img src="/Orpps/assets/images/logos_orpps/user_logo_hat.png" alt="User Logo Hat" class="user-logo__hat">
+                    <img src="/Orpps/assets/images/logos_orpps/user_logo_mustache.png" alt="User Logo Mustache" class="user-logo__mustache">
+                </div>
             </a>
             <a href="/Orpps/index.html">
                 <img src="/Orpps/assets/images/logos_orpps/orpps_logo.png" alt="Orpps Logo">
